// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound 1`] = `
<vm-menu-radio-group value="1">
  <!---->
  <vm-menu-radio label="one" value="1">
    <vm-menu-item checked="" checkedicon="#vime-checkmark" label="one"></vm-menu-item>
  </vm-menu-radio>
  <vm-menu-radio label="two" value="2">
    <vm-menu-item checkedicon="#vime-checkmark" label="two"></vm-menu-item>
  </vm-menu-radio>
  <vm-menu-radio label="three" value="3">
    <vm-menu-item checkedicon="#vime-checkmark" label="three"></vm-menu-item>
  </vm-menu-radio>
</vm-menu-radio-group>
`;

exports[`should turn off checked radios on change 1`] = `
<vm-menu-radio-group value="1">
  <!---->
  <vm-menu-radio label="one" value="1">
    <vm-menu-item checkedicon="#vime-checkmark" label="one"></vm-menu-item>
  </vm-menu-radio>
  <vm-menu-radio label="two" value="2">
    <vm-menu-item checked="" checkedicon="#vime-checkmark" label="two"></vm-menu-item>
  </vm-menu-radio>
  <vm-menu-radio label="three" value="3">
    <vm-menu-item checkedicon="#vime-checkmark" label="three"></vm-menu-item>
  </vm-menu-radio>
</vm-menu-radio-group>
`;
